# uv-based-python-project

./: README.md  main.py  pyproject.toml
src/new_service/: views.py
tests/: test_e2e.py
