[project]
name = "new_service"
version = "0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi", "granian"]

[dependency-groups]
dev = [
    "fastapi[standard]",
 "pdbpp>=0.11.7",
 "pytest",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"
